--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ whitenoise==6.6.0
 dj-database-url==2.1.0
 psycopg2-binary==2.9.9
 
-# OCR機能
+# OCR機能（ヘッドレス版）
 Pillow==11.3.0
 pyocr==0.8.5
-opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
 numpy==2.2.6
 
 # PDF生成機能
